Updated the TODO to include custom dictionary file feature

--- a/TODO
+++ b/TODO
@@ -5,3 +5,4 @@ TODO
 * Describe the rules of the game unambiguously.
 * Word list on Windows?
 * High scores for each user.
+* Allow usage of custom words file.
