--- a/cows-and-bulls.6
+++ b/cows-and-bulls.6
@@ -18,7 +18,7 @@ Cows and Bulls \- A word guessing game based on the 'Cows and Bulls' game for nu
 .SH SYNOPSIS
 .B cows\-and\-bulls
 .SH DESCRIPTION
-Cows and Bulls is a word guessing game based on the Cows and Bulls game with numbers. The game chooses a word of known length and the player has to guess the word by guessing words of the same length. For each guess, the game tells the number of cows (the alphabet in the chosen word present in the exact position in the guessed word) and bulls (the alphabet in the chosen word present in a different position in the guessed word). Based on that, the player can improve his guesses to come closer to chosen word and eventually find it.
+Cows and Bulls is a word guessing game based on the Cows and Bulls game with numbers. The game chooses a word of known length and the player has to guess the word by guessing words of the same length. For each guess, the game tells the number of cows (the letter in the chosen word present in the exact position in the guessed word) and bulls (the letter in the chosen word present in a different position in the guessed word). Based on that, the player can improve his guesses to come closer to chosen word and eventually find it.
 .SH AUTHORS
 .B cows\-and\-bulls
 was written by L. Guruprasad
