Fixed a groff error in the manpage title

--- a/cows-and-bulls.6
+++ b/cows-and-bulls.6
@@ -14,7 +14,7 @@
 .\"51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 .TH cows-and-bulls 6 "2012\-07\-22" "Cows and Bulls"
 .SH NAME
-Cows and Bulls \- A word guessing game based on the 'Cows and Bulls' game for numbers
+cows-and-bulls \- A word guessing game based on the 'Cows and Bulls' game for numbers
 .SH SYNOPSIS
 .B cows\-and\-bulls
 .SH DESCRIPTION
